objects/Dbj1__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <description>new98</description>
        <label>F1</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <description>New33344555</description>
        <label>F2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>